<resources>
    <string name="app_name">Zambo</string>
    <string name="fgtpwd"><u>Forgot Password?</u></string>
    <string name="new_reg"><u>New User Registration</u></string>
    <string name="login"><u>Login</u></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pay_terms">I agree that Zambo/Bank/UIDAI may share my details with each other for the purpose of authenticating my Aadhaar Number</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="email_mob">Email/Mobile</string>
    <string name="ret_pass">Retrieve Password</string>
    <string name="dth">Recharge your DTH</string>
    <string name="datacard">Recharge your Datacard</string>
    <string name="mobile_recharge">Recharge your Mobile</string>
    <string name="dth_no">Account No.</string>
    <string name="datacard_no">Datacard No.</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="username">Email/Mobile</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="my_profile">My Profile</string>
    <string name="user_id">User Id</string>
    <string name="state">State</string>
    <string name="update_profile">Update Profile</string>
    <string name="enter_company">Enter Company Name</string>
    <string name="add_line_one">Address Line 1</string>
    <string name="add_line_two">Address Line 2</string>
    <string name="city">Enter City</string>
    <string name="pin">Enter Pincode</string>
    <string name="history">Transaction Statement</string>
    <string name="pay_electricity">Pay Electricty Bills</string>
    <string name="account_no">Account Number</string>
    <string name="recharge">Recharge</string>
    <string name="bill_payment">Bill Payments</string>
    <string name="customer_acc">Customer Account</string>
    <string name="pay_gas">Pay for Gas</string>
    <string name="number">Number</string>
    <string name="pay_landline">Pay For Landline</string>
    <string name="pay_insurance">Pay for Insurance</string>
    <string name="support_desk">Support Desk</string>
    <string name="refund">Refund/Cancellation Policy</string>
    <string name="pr_pol"><![CDATA[T&C/Privacy Policy]]></string>
    <string name="notification">Notification</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="rateus">Rate Us</string>
    <string name="home">Home</string>
    <string name="no_internet">No Internet Connectivity</string>
    <string name="money_transfer">Money Transfer</string>
    <string name="continu">Continue</string>
    <string name="no_beneficiary">No Beneficiary</string>
    <string name="add_benef">Add Beneficiary</string>
    <string name="add_sender">Add Sender</string>
    <string name="enter_mob">Enter Sender Mobile Number</string>
    <string name="enter_name">Enter Sender name</string>
    <string name="otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="add_new_benef">Add New Beneficiary</string>
    <string name="transfer">Transfer</string>
    <string name="aeps">AEPS</string>
    <string name="aeps_reciept">AEPS Reciept</string>
    <string name="go_back">Go Back</string>
    <string name="otp_message">Enter OTP sent to your mobile</string>
    <string name="pay_mob">Pay Mobile Bill</string>
    <string name="bill">Pay Bill</string>
    <string name="add_money">Add Money</string>
    <string name="add_money_wallet">Add Money to wallet</string>
    <string name="fingpayaeps">Prime Aeps</string>
    <string name="fingpayaeps2">Aadhaar Pay</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="add_mon">Add Money</string>
    <string name="tran_history">History</string>
    <string name="money_transfer_two">Money Transfer 2.0</string>
    <string name="recharge_2">Recharge 2.0</string>
    <string name="recharge_3">Recharge 3.0</string>
    <string name="bbps">BBPS</string>
    <string name="pay_mobile">Mobile Postpaid Bill</string>
    <string name="pay_dth">Pay for DTH</string>
    <string name="pay_broadband">Pay for Broadband Bill</string>
    <string name="electricity_bill">Electricity Bill Payment</string>
    <string name="pay_landline_bill">Landline Bill Payment</string>
    <string name="pay_gas_bill">Gas Bill Payment</string>
    <string name="pay_water_bill">Water Bill Payment</string>
    <string name="pay_bill">Continue to Pay Bill</string>
    <string name="enter_otp">Enter otp sent to your mobile</string>
    <string name="close">Close</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="aeps_redeem">Redeem AEPS Wallet</string>
    <string name="current_aeps_balance">Current AEPS Balance</string>
    <string name="to_main">To Main Wallet(₹) :</string>
    <string name="to_bank">To Bank(₹) :</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_agent_recharge_two">AgentRechargeTwo</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_district">Enter District</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_pincode">Pincode</string>
    <string name="enter_account">Enter Account</string>
    <string name="enter_bank">Enter Bank Name</string>
    <string name="enter_correct_bank">Enter valid bank</string>
    <string name="zambo_technology">Zambo Technology India Private Limited</string>
    <string name="zambo_helpline">Helpline No: +91-8800-880-368</string>
    <string name="view_transaction">View transactions</string>
    <string name="wallet_transfer_bank">Wallet transfer to bank</string>
    <string name="enter_amount_recharge">Enter amount to recharge</string>
    <string name="wallet_id">Wallet Id</string>
    <string name="enter_fastag_id">Enter Wallet Id</string>
    <string name="enter_mobile">Enter 10 digit mobile no.</string>
    <string name="enter_otp_sent">Enter otp sent to your mobile no.</string>
    <string name="enter_otp_hine">Enter OTP</string>
    <string name="remitter_not_found">Remitter Not Found! Please verify and add as new Remitter.</string>
    <string name="remitter_not_found_msg">Remitter not found! Enter detail below to register new remitter.</string>
    <string name="account_number">Account Number</string>
    <string name="enter_ifsc">Enter IFSC</string>
    <string name="ifsc_no">IFSC No.</string>
    <string name="enter_bene_name">Enter Beneficiary Name</string>
    <string name="delete">Delete</string>
    <string name="select_type">Select Trasnfer Type</string>
    <string name="imps">IMPS</string>
    <string name="neft">NEFT</string>
    <string name="enter_amount_hint">Enter amount (₹)</string>
    <string name="dmt">DMT</string>
    <string name="permission_read_phone_state_rationale">Allow permission to read phone state!</string>
    <string name="permissions_not_granted_read_phone_state">Permission not granted for read phone state!</string>
    <string name="balance_enquiry">Balance Enquiry</string>
    <string name="cash_withdraw">Cash Withdraw</string>
    <string name="Aadhaar">आधार</string>
    <string name="Aadhaar2">आम आदमी का अधिकार</string>
    <string name="Rs">\u20B9</string>
    <string name="aadhaar">Aadhaar</string>
    <string name="aadhaar_pay">Aadhaar Pay</string>
    <string name="aadhaar_rg">AADHAAR</string>
    <string name="activate_license">ACTIVATE LICENSE</string>
    <string name="agree_terms">Please provide your consent</string>
    <string name="alert_dialog_title">Alert</string>
    <string name="amount">Amount</string>
    <string name="auth_type">Authentication Type</string>
    <string name="bad_req">Bad Request</string>
    <string name="balance_enq">Balance Enquiry</string>
    <string name="bank_name">Bank Name :</string>
    <string name="bank_rrn">Bank RRN</string>
    <string name="bill_no">Bill Number</string>
    <string name="bill_no_err">Please enter Bill Number</string>
    <string name="biomatiques">Biomatiques Scanner</string>
    <string name="cancel_btn">Cancel</string>
    <string name="captured_xml_null">CapturedFingerprintXML is null</string>
    <string name="cash_deposit">Cash Deposit</string>
    <string name="cash_withdrawal">Cash Withdrawal</string>
    <string name="collect">COLLECT</string>
    <string name="confirmation">Confirmation</string>
    <string name="cust_mobile">Customer Mobile Number</string>
    <string name="cust_vpa">Enter Customer VPA</string>
    <string name="dev_info_null">Device info is null</string>
    <string name="dev_not_connected">Device not connected,Please connect the device properly</string>
    <string name="dev_not_ready">Device not Ready</string>
    <string name="dev_not_registered">Device not registered,Please register the device</string>
    <string name="device_connectivity">Please check data network on your device.</string>
    <string name="device_permission">This app needs permission to get Device Information</string>
    <string name="done">DONE</string>
    <string name="error_code">error code = </string>
    <string name="evolute_scanner">Evolute Scanner</string>
    <string name="fail_status">status = fail , error code = unknown error</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="fp_text">Please ask customer to give fingerprint on device</string>
    <string name="from">From Date</string>
    <string name="from_to">From date cannot be after to date</string>
    <string name="gen_qr">GENERATE QR</string>
    <string name="getting_location">Getting Location, Please Wait...</string>
    <string name="goto_permissions">Go to Permissions to Grant</string>
    <string name="grant">Grant</string>
    <string name="id">Transaction Id</string>
    <string name="internal_error">Internal Server Error</string>
    <string name="iris">Iris</string>
    <string name="iris_scanner_changed">Default Iris Scanner changed successfully</string>
    <string name="iris_text">Please ask customer to give iris on device</string>
    <string name="is_null">Input stream is null</string>
    <string name="license_activated"> License Activated</string>
    <string name="loading">Loading...</string>
    <string name="loc_enabled">Location is Enabled</string>
    <string name="location_permission">This app needs Location permission.</string>
    <string name="mantra">Mantra Scanner</string>
    <string name="mob_num">Mobile Number</string>
    <string name="morpho">Morpho Scanner</string>
    <string name="need_permissions">Need Multiple Permissions</string>
    <string name="network_error">Server Unavailable while sending data</string>
    <string name="network_error_message">Please check your network connection and try again.</string>
    <string name="network_error_title">Network Error!</string>
    <string name="next">NEXT</string>
    <string name="no">NO</string>
    <string name="no_banks">No Banks</string>
    <string name="no_history">No History</string>
    <string name="no_payment_types">No Payment Types</string>
    <string name="not_valid_adh">Not a valid Aadhaar number</string>
    <string name="ok_btn">OK</string>
    <string name="or">OR</string>
    <string name="out_of_range">Amount is not within transaction limit.</string>
    <string name="parse_detailed_msg">Data may not be valid or server has issues</string>
    <string name="parse_display_msg">Error Parsing Data</string>
</resources>