<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_close_add_sender"
        android:layout_width="@dimen/DP35"
        android:layout_height="@dimen/DP35"
        android:src="@drawable/close"
        android:padding="@dimen/DP10"/>

    <LinearLayout
        android:id="@+id/linear_sender_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/mobile_no"
            android:layout_margin="@dimen/DP8"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_sender_mobile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint=""
                android:imeOptions="actionSend|actionGo|actionDone"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:maxLines="1"
                android:singleLine="true">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/enter_name"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:padding="@dimen/DP8"
            android:textSize="@dimen/SP16"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/name"
            android:layout_margin="@dimen/DP8"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_sender_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint=""
                android:imeOptions="actionSend|actionGo|actionDone"
                android:inputType="text"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:maxLines="1"
                android:singleLine="true">
            </com.google.android.material.textfield.TextInputEditText>

            <requestFocus/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_add_name_sender"
            android:layout_width="@dimen/DP150"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:layout_gravity="center"
            android:text="Add"
            android:layout_margin="@dimen/DP10"
            android:textSize="@dimen/SP16"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_sender_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_sender_otp_message"
            android:layout_width="wrap_content"
            android:padding="@dimen/DP8"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/otp_message"
            android:textColor="@color/blue"
            android:textSize="@dimen/SP16"
            android:textStyle="normal"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/otp"
            android:layout_margin="@dimen/DP8"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_sender_otp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint=""
                android:imeOptions="actionSend|actionGo|actionDone"
                android:inputType="number"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:maxLines="1"
                android:singleLine="true">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_verify_sender_otp"
            android:layout_width="@dimen/DP150"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/verify"
            android:textStyle="bold"
            android:textSize="@dimen/SP16"
            android:textColor="@color/white"
            android:background="@color/green"/>

        <TextView
            android:id="@+id/txt_resend_sender_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/DP10"
            android:layout_margin="@dimen/DP8"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:text="@string/resend_otp"/>

    </LinearLayout>

</LinearLayout>